K8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 8000
  selector:
    app: demo-kube
    task: server
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: demo-kube
    task: client
