K8/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demokube
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: demo.kubernets.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: server
          servicePort: http
      - path: /
        backend:
          serviceName: client
          servicePort: http
